--- a/App/Views/Teacher/Dashboard/Attendance/index.html
+++ b/App/Views/Teacher/Dashboard/Attendance/index.html
@@ -36,11 +36,11 @@ block body %}
       <td>{{student.rollNum}}</td>
       <td>{{student.name}}</td>
       <td>
-        <button onclick="addP(this)"
+        <button onclick="addP(this)" data-studentID='{{student.id}}'
           class="pres btn bg-gray-200 text-black hover:text-white hover:bg-green-600"
         >
           Present</button
-        ><button onclick="addA(this)"
+        ><button onclick="addA(this)" data-studentID='{{student.id}}'
           class="abs btn bg-gray-200 text-black hover:text-white hover:bg-red-600"
         >
           Absent
@@ -60,29 +60,40 @@ block body %}
     {% endfor %}
   </tbody>
 </table>
+<button onclick="submitAttendance()"  class="btn btn-primary">Submit</button>
 <script>
-
   $(document).ready(function(){
     console.log('jQuery init');
   });
 
+
+  function submitAttendance(){
+    let formData = {present:[],absent:[]};
+    $('.present').each(function () {
+      formData.present.push($(this).attr('data-studentID'));
+    })
+    $('.absent').each(function () {
+      formData.absent.push($(this).attr('data-studentID'));
+    })
+    console.log(formData);
+  }
   function addP(e){
-    $(e).addClass('text-white bg-green-600');
+    $(e).addClass('text-white bg-green-600 present');
     $(e).siblings().each(function(){
       removeA(this);
     })
   }
   function addA(e){
-    $(e).addClass('text-white bg-red-600');
+    $(e).addClass('text-white bg-red-600 absent');
     $(e).siblings().each(function(){
       removeP(this);
     })
   }
   function removeP(e){
-    $(e).removeClass('text-white bg-green-600');
+    $(e).removeClass('text-white bg-green-600 present');
   }
   function removeA(e){
-    $(e).removeClass('text-white bg-red-600');
+    $(e).removeClass('text-white bg-red-600 absent');
   }
 
   function allP() {
