--- a/App/Views/Teacher/Dashboard/profile.html
+++ b/App/Views/Teacher/Dashboard/profile.html
@@ -20,29 +20,161 @@
                                 <div class="px-4 py-2 font-semibold">Name</div>
                                 <div class="px-4 py-2">{{teacher.name}}</div>
                             </div>
-
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-2 font-semibold">Contact No.</div>
                                 <div class="px-4 py-2">{{teacher.mobile}}</div>
                             </div>
-
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-2 font-semibold">Email.</div>
                                 <div class="px-4 py-2">
-                                    <a class="text-blue-800" href="mailto:jane@example.com">{{teacher.email}}</a>
+                                    <a class="text-blue-800" href="mailto:{{teacher.email}}">{{teacher.email}}</a>
                                 </div>
                             </div>
-
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-2 font-semibold">Department</div>
                                 <div class="px-4 py-2">
-                                    <a class="text-blue-800" href="mailto:jane@example.com">{{teacher.department}}</a>
+                                    {{teacher.department|ucf}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="my-4"></div>
+                <div>
+                    <div class="bg-white p-3 shadow-sm rounded-sm">
+
+                        <div class="grid grid-cols-2">
+                            <div>
+                                <div>
+                                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
+                                        <span clas="text-green-500">
+                                            <i class="fas fa-briefcase"></i>
+                                        </span>
+                                        <span class="tracking-wide">Experiences</span>
+                                    </div>
+                                    <div class="grid md:grid-cols-2 text-sm">
+                                        {% if experience|length %}
+                                        {% for exp in experience %}
+                                        <div>
+                                            <div class="px-4 py-2 font-semibold">{{exp.title|ucf}}
+                                            </div>
+                                            <div class="px-4 py-2">
+                                                {{exp.companyName|ucf}}.{{exp.employmentType|ucf}}
+                                                <br>
+                                                {{exp.location|ucf}}
+                                                <br>
+                                                {{exp.fromDate}}-{{exp.toDate}}
+                                            </div>
+
+                                        </div>
+                                        {% endfor %}
+                                        {% else %}
+                                        <div class="px-4 py-2">
+                                            No experience till now.
+                                        </div>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white p-3 shadow-sm rounded-sm">
+
+                        <div class="grid grid-cols-2">
+                            <div>
+                                <div>
+                                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
+                                        <span clas="text-green-500">
+                                            <i class="fas fa-certificate"></i>
+                                        </span>
+                                        <span class="tracking-wide">Skills and Endornments</span>
+                                    </div>
+                                    {% if achivements|length %}
+                                    {% for achievement in achivements %}
+                                    <div>
+                                        <div>
+                                            <div class="px-4 py-2 font-semibold">{{achievement.title|ucf}}</div>
+                                        </div>
+                                        <div class="px-4 py-2">
+                                            {{achievement.description|ucf}}
+                                            <br>
+                                            {{achievement.date}}
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                    {% else %}
+                                    <div>
+                                        <div class="px-4 py-2">
+                                            No updates yet.
+                                        </div>
+                                    </div>
+                                    {% endif %}
+
+                                    {% if certificate|length %}
+                                    {% for certificate in certification %}
+                                    <div>
+                                        <div>
+                                            <div class="px-4 py-2 font-semibold">{{certificate.title|ucf}}</div>
+                                        </div>
+                                        <div class="px-4 py-2">
+                                            {{certificate.description|ucf}}
+                                            <br>
+                                            {{certificate.date}}
+                                            <br>
+                                            <a href="{{certificate.link}}">{{certificate.link}}</a>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                    {% else %}
+                                    <div class="px-4 py-2">
+                                        No updates yet
+                                    </div>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white p-3 shadow-sm rounded-sm">
+
+                        <div class="grid grid-cols-2">
+                            <div>
+                                <div>
+                                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
+                                        <span clas="text-green-500">
+                                            <i class="fas fa-project-diagram"></i>
+                                        </span>
+                                        <span class="tracking-wide">Projects and works</span>
+                                    </div>
+                                    {% if projects|length %}
+                                    {% for project in projects %}
+                                    <div>
+                                        <div>
+                                            <div class="px-4 py-2 font-semibold">{{project.title|ucf}}</div>
+                                        </div>
+                                        <div class="px-4 py-2">
+                                            {{project.description|ucf}}
+                                            <br>
+                                            {{project.fromDate}}-{{project.toDate}}
+                                            <br>
+                                            <a href="{{project.link}}">{{project.link}}</a>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                    {% else %}
+                                    <div class="px-4 py-2">
+                                        No projects yet
+                                    </div>
+                                    {% endif %}
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
-    {%endblock%}
+</div>
+{%endblock%}
