--- a/App/Views/Teacher/Dashboard/profile.html
+++ b/App/Views/Teacher/Dashboard/profile.html
@@ -3,174 +3,13 @@
     <div class="container mx-auto my-5 p-5">
         <div class="md:flex no-wrap md:-mx-2 ">
             <div class="w-full md:w-9/12 mx-2 h-64">
-                <div class="bg-white p-3 shadow-sm rounded-sm">
-                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8">
-                        <span clas="text-green-500">
-                            <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                            </svg>
-                        </span>
-                        <span class="tracking-wide">About</span>
-                    </div>
-                    <div class="text-gray-700">
-                        <div class="grid md:grid-cols-2 text-sm">
-                            <div class="grid grid-cols-2">
-                                <div class="px-4 py-2 font-semibold">Name</div>
-                                <div class="px-4 py-2">{{teacher.name}}</div>
-                            </div>
-                            <div class="grid grid-cols-2">
-                                <div class="px-4 py-2 font-semibold">Contact No.</div>
-                                <div class="px-4 py-2">{{teacher.mobile}}</div>
-                            </div>
-                            <div class="grid grid-cols-2">
-                                <div class="px-4 py-2 font-semibold">Email.</div>
-                                <div class="px-4 py-2">
-                                    <a class="text-blue-800" href="mailto:{{teacher.email}}">{{teacher.email}}</a>
-                                </div>
-                            </div>
-                            <div class="grid grid-cols-2">
-                                <div class="px-4 py-2 font-semibold">Department</div>
-                                <div class="px-4 py-2">
-                                    {{teacher.department|ucf}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="my-4"></div>
+                {% include 'about.html' with{'details':teacher} %}
                 <div>
-                    <div class="bg-white p-3 shadow-sm rounded-sm">
-
-                        <div class="grid grid-cols-2">
-                            <div>
-                                <div>
-                                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
-                                        <span clas="text-green-500">
-                                            <i class="fas fa-briefcase"></i>
-                                        </span>
-                                        <span class="tracking-wide">Experiences</span>
-                                    </div>
-                                    <div class="grid md:grid-cols-2 text-sm">
-                                        {% if experience|length %}
-                                        {% for exp in experience %}
-                                        <div>
-                                            <div class="px-4 py-2 font-semibold">{{exp.title|ucf}}
-                                            </div>
-                                            <div class="px-4 py-2">
-                                                {{exp.companyName|ucf}}.{{exp.employmentType|ucf}}
-                                                <br>
-                                                {{exp.location|ucf}}
-                                                <br>
-                                                {{exp.fromDate}}-{{exp.toDate}}
-                                            </div>
-
-                                        </div>
-                                        {% endfor %}
-                                        {% else %}
-                                        <div class="px-4 py-2">
-                                            No experience till now.
-                                        </div>
-                                        {% endif %}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-white p-3 shadow-sm rounded-sm">
-
-                        <div class="grid grid-cols-2">
-                            <div>
-                                <div>
-                                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
-                                        <span clas="text-green-500">
-                                            <i class="fas fa-certificate"></i>
-                                        </span>
-                                        <span class="tracking-wide">Skills and Endornments</span>
-                                    </div>
-                                    {% if achivements|length %}
-                                    {% for achievement in achivements %}
-                                    <div>
-                                        <div>
-                                            <div class="px-4 py-2 font-semibold">{{achievement.title|ucf}}</div>
-                                        </div>
-                                        <div class="px-4 py-2">
-                                            {{achievement.description|ucf}}
-                                            <br>
-                                            {{achievement.date}}
-                                        </div>
-                                    </div>
-                                    {% endfor %}
-                                    {% else %}
-                                    <div>
-                                        <div class="px-4 py-2">
-                                            No updates yet.
-                                        </div>
-                                    </div>
-                                    {% endif %}
-
-                                    {% if certificate|length %}
-                                    {% for certificate in certification %}
-                                    <div>
-                                        <div>
-                                            <div class="px-4 py-2 font-semibold">{{certificate.title|ucf}}</div>
-                                        </div>
-                                        <div class="px-4 py-2">
-                                            {{certificate.description|ucf}}
-                                            <br>
-                                            {{certificate.date}}
-                                            <br>
-                                            <a href="{{certificate.link}}">{{certificate.link}}</a>
-                                        </div>
-                                    </div>
-                                    {% endfor %}
-                                    {% else %}
-                                    <div class="px-4 py-2">
-                                        No updates yet
-                                    </div>
-                                    {% endif %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-white p-3 shadow-sm rounded-sm">
-
-                        <div class="grid grid-cols-2">
-                            <div>
-                                <div>
-                                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
-                                        <span clas="text-green-500">
-                                            <i class="fas fa-project-diagram"></i>
-                                        </span>
-                                        <span class="tracking-wide">Projects and works</span>
-                                    </div>
-                                    {% if projects|length %}
-                                    {% for project in projects %}
-                                    <div>
-                                        <div>
-                                            <div class="px-4 py-2 font-semibold">{{project.title|ucf}}</div>
-                                        </div>
-                                        <div class="px-4 py-2">
-                                            {{project.description|ucf}}
-                                            <br>
-                                            {{project.fromDate}}-{{project.toDate}}
-                                            <br>
-                                            <a href="{{project.link}}">{{project.link}}</a>
-                                        </div>
-                                    </div>
-                                    {% endfor %}
-                                    {% else %}
-                                    <div class="px-4 py-2">
-                                        No projects yet
-                                    </div>
-                                    {% endif %}
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="my-4"></div>
+                    {% include 'experience.html' with{'experience':experience} %}
+                    {% include 'skills.html' with{'achievements':achievements,'certificate':certification}%}
+                    <div class="my-4"></div>
+                    {% include 'project.html' with{'projects':projects}%}
                 </div>
             </div>
 
