added twig extention

--- a/App/Views/education.html
+++ b/App/Views/education.html
@@ -74,7 +74,7 @@
                         <div class="px-4 py-2">
                             {{education.field|ucf}}
                             <br>
-                            {{education.fromDate}}-{{education.toDate}}
+                            {{education.fromDate|formatDate}} - {{education.toDate|formatDate}}
                         </div>
 
                     </div>
