--- a/App/Views/experience.html
+++ b/App/Views/experience.html
@@ -19,7 +19,7 @@
                             <br>
                             {{exp.location|ucf}}
                             <br>
-                            {{exp.fromDate}}-{{exp.toDate}}
+                            {{exp.fromDate|formatDate}} - {{exp.toDate|formatDate}}
                         </div>
 
                     </div>
