--- a/App/Views/project.html
+++ b/App/Views/project.html
@@ -17,7 +17,7 @@
                     <div class="px-4 py-2">
                         {{project.description|ucf}}
                         <br>
-                        {{project.fromDate}}-{{project.toDate}}
+                        {{project.fromDate|formatDate}} - {{project.toDate|formatDate}}
                         <br>
                         <a href="{{project.link}}">{{project.link}}</a>
                     </div>
