using single studentpersonaldetails entity for each student

--- a/App/Views/about.html
+++ b/App/Views/about.html
@@ -32,25 +32,25 @@
             {% if studentpersonaldetails %}
             <div class="grid grid-cols-2">
                 <div class="px-4 py-2 font-semibold">Father's Name</div>
-                <div class="px-4 py-2">{{studentpersonaldetails[0].fatherName}}</div>
+                <div class="px-4 py-2">{{studentpersonaldetails.fatherName}}</div>
             </div>
             <div class="grid grid-cols-2">
                 <div class="px-4 py-2 font-semibold">Mother's Name</div>
-                <div class="px-4 py-2">{{studentpersonaldetails[0].motherName}}</div>
+                <div class="px-4 py-2">{{studentpersonaldetails.motherName}}</div>
             </div>
             <div class="grid grid-cols-2">
                 <div class="px-4 py-2 font-semibold">Guardian No.</div>
-                <div class="px-4 py-2">{{studentpersonaldetails[0].fatherMobile}}</div>
+                <div class="px-4 py-2">{{studentpersonaldetails.fatherMobile}}</div>
             </div>
             <div class="grid grid-cols-2">
                 <div class="px-4 py-2 font-semibold">Guardian's Email</div>
                 <div class="px-4 py-2">
-                    <a href="mailto:studentpersonaldetails[0].fatherEmail">{{studentpersonaldetails[0].fatherEmail}}</a>
+                    <a href="mailto:{{studentpersonaldetails.fatherEmail}}">{{studentpersonaldetails.fatherEmail}}</a>
                 </div>
             </div>
             <div class="grid grid-cols-2">
                 <div class="px-4 py-2 font-semibold">Address</div>
-                <div class="px-4 py-2">{{studentpersonaldetails[0].address}}</div>
+                <div class="px-4 py-2">{{studentpersonaldetails.address}}</div>
             </div>
             {% endif %}
             <div class="grid grid-cols-2">
