--- a/App/Views/Admin/Dashboard/TimeTable/index.html
+++ b/App/Views/Admin/Dashboard/TimeTable/index.html
@@ -221,12 +221,7 @@ block body %}
             },
           })
             .done(() => {
-              Toastify({
-                text: 'Time-Table Updated',
-                style: {
-                  background: 'linear-gradient(to right, #00b09b, #96c93d)',
-                },
-              }).showToast();
+              showSuccessMessage('Time-Table Updated');
             })
             .fail(console.log);
           return false;
