--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -44,44 +44,7 @@
     {% include 'menu.html' with {'islogin':islogin,'listItems':listItems,'type':type}%}
     <div class="container">{% block body %} {% endblock %}</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    <script type="text/javascript">
-      var successMsg = {{ SUCCESS_MESSAGE | json_encode() | raw }}
-      var infoMsg = {{ INFO_MESSAGE | json_encode() | raw }}
-      var errorMsg = {{ ERROR_MESSAGE | json_encode() | raw }}
-      var warnMsg = {{ WARNING_MESSAGE | json_encode() | raw }}
-      if (successMsg) {
-        Toastify({
-          text: successMsg,
-          style: {
-            background: "linear-gradient(to right, #00b09b, #96c93d)",
-          }
-        }).showToast();
-      }
-      if (infoMsg) {
-        Toastify({
-          text: infoMsg,
-          style: {
-            background: "linear-gradient(to right, #00b09b, #96c93d)",
-          }
-        }).showToast();
-      }
-      if (errorMsg) {
-        Toastify({
-          text: errorMsg,
-          style: {
-            background: "linear-gradient(to right, #b01800, #c93d3d)",
-          }
-        }).showToast();
-      }
-      if (warnMsg) {
-        Toastify({
-          text: warnMsg,
-          style: {
-            background: "linear-gradient(to right, #00b09b, #96c93d)",
-          }
-        }).showToast();
-      }
-    </script>
+    {% include 'message.html' %}
 </body>
 
 </html>
