--- a/App/Views/login.html
+++ b/App/Views/login.html
@@ -1,4 +1,4 @@
-{%extends "base.html"%} {%block body%}
+{%extends "base.html"%} {% block title %}Login{% endblock %}  {%block body%} 
 <div class="flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
     <div class="max-w-md w-full space-y-8">
         <div>
@@ -31,7 +31,7 @@
             </div>
 
             <div>
-                <button type="submit"
+                <button type="submit" id="submitButton"
                     class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-blue-900 hover:bg-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                     <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                         <svg class="h-5 w-5 text-indigo-100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
